--- a/testProject/package.json
+++ b/testProject/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "testproject",
-  "private": true,
+  "name": "three-demo",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
+    "vite": "^2.3.0"
+  },
+  "dependencies": {
+    "three": "^0.128.0"
   }
 }
